[package]
name = "Ex5_dealingDamage_original"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-terminal = "0.8.5"
bracket-pathfinding = "0.8.4"
bracket-random = "0.8.2"
getrandom = { version = "0.2", features = ["js"] }
specs = "0.16.1"
specs-derive = "0.4.1"